--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Oswald', sans-serif;
-            background: url('img.webp') no-repeat center center fixed;
+            background: url('img.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #ffffff;
         }
@@ -139,7 +139,7 @@
                 <a href="cal.html">Ir para Calculadora</a>
             </div>
             <div class="image">
-                <img src="img.webp" alt="Imagem do Skin Walker">
+                <img src="img.jpg" alt="Imagem do Skin Walker">
             </div>
         </div>
 
