--- a/cal.html
+++ b/cal.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Oswald', sans-serif;
-            background: url('img.webp') no-repeat center center fixed;
+            background: url('img.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #ffffff;
             display: flex;
