--- a/cal.html
+++ b/cal.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Oswald', sans-serif;
-            background: url('img.jpg') no-repeat center center fixed;
+            background: url('img.webp') no-repeat center center fixed;
             background-size: cover;
             color: #ffffff;
             display: flex;
@@ -104,8 +104,6 @@
                 <select id="exerciseType">
                     <option value="8">Caminhada leve</option>
                     <option value="10">Corrida</option>
-                    <option value="6">Ciclismo</option>
-                    <option value="5">Yoga</option>
                 </select>
             </div>
             <button type="button" onclick="calculateCalories()">Calcular</button>
